// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing in <GifExpertApp /> Must be show one list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GitfGrid
      category="One punch"
      key="One punch"
    />
    <GitfGrid
      category="Dragon ball"
      key="Dragon ball"
    />
  </ol>
</Fragment>
`;

exports[`Testing in <GifExpertApp /> should be show successfuly  1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
